# CFS

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: bad_cases.csv  inputs_demo.csv
src/cfs/: cli.py  errors.py
src/cfs/io/: __init__.py  parse_cases.py
src/cfs/models/: __init__.py  isentropic.py  normal_shock.py  oblique_shock.py
src/cfs/report/: plots.py  render_html.py  render_pdf.py
src/cfs/report/templates/: report.html.j2
src/compressible_flow_studio.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_batch_error_handling.py  test_cli_pdf_smoke.py  test_cli_smoke.py  test_isentropic.py  test_missing_fields.py  test_normal_shock.py  test_oblique_shock.py  test_plots_smoke.py  test_render_pdf.py  test_report_error_summary.py  test_report_smoke.py  test_run_command.py
